<resources>
    <string name="app_name" translatable="false">Walls4me</string>
    <string name="act_inicial_nombre_app" translatable="false">Walls4me</string>
    <string name="act_inicial_nombre" translatable="false">Walls4me</string>
    <string name="act_inicial_txt_boton_login">Iniciar sesión</string>
    <string name="act_inicial_txt_boton_registrarse">Registrarse</string>
    <string name="act_login_txt_ir_a_registrarse">¿No tienes una cuenta? Regístrate!</string>
    <string name="act_login_btn_login">Iniciar sesión</string>
    <string name="act_login_btn_recordar_pass">Recordar contraseña</string>
    <string name="act_register_btn_register">Registrarse</string>
    <string name="bottom_navigation_categorias">Categorías</string>
    <string name="bottom_navigation_favoritos">Favoritos</string>
    <string name="bottom_navigation_home" formatted="true">Inicio</string>
    <string name="act_login_hint_email">Email</string>
    <string name="act_login_hint_password">Contraseña</string>
    <string name="act_register_hint_nombre">Nombre</string>
    <string name="act_register_hint_email">Email</string>
    <string name="act_register_hint_password">Contraseña</string>
    <string name="act_register_hint_confirm_password">Repita la contraseña</string>
    <string name="act_register_txt_ir_a_login">¿Tienes una cuenta? Inicia sesión</string>
    <string name="act_login_btn_recordar_password">Olvidaste tu contraseña?</string>
    <string name="act_recupera_pass_hint_email">Email</string>
    <string name="act_recupera_pass_recuperar_pass">Recuperar contraseña</string>
    <string name="titulo_recupera_pass">¿Has olvidado la contraseña?</string>
    <string name="subtitulo_recupera_pass">Introduce el correo electrónico asociado a tu cuenta para restablecer la contraseña.</string>
    <string name="act_wallpaper_btn_establecer_fondo">Establecer</string>
    <string name="act_wallpaper_btn_mostrar_opciones">Toque la imagen para mostrar las opciones</string>
    <string name="act_login_mostrar_password">Mostrar</string>
    <string name="act_recupera_pass_volver">Ir a inicio de sesión</string>
    <string name="frg_favoritos_disponobilidad">¡En breves podrás guardar tus fondos favoritos!</string>
    <string name="act_abstracto_txt_cabecera">Abstracto</string>
    <string name="act_ajustes_txt_cerrar_sesion">Cerrar sesión</string>
    <string name="bottom_navigation_info">Info</string>
    <string name="act_aanimales_txt_cabecera">Animales</string>
    <string name="act_deportes_txt_cabecera">Deportes</string>
    <string name="act_paisajes_txt_cabecera">Paisajes</string>
    <string name="act_texturas_txt_cabecera">Texturas</string>
    <string name="act_vehiculos_txt_cabecera">Vehiculos</string>
    <string name="frg_ajustes_email">Email</string>
    <string name="frg_ajustes_nombre_usuario">Usuario</string>
    <string name="act_wallpaper_btn_visualizar">Visualizar</string>
    <string name="frg_info_aviso_legal">Aviso legal</string>
    <string name="act_login_correo_invalido">Correo inválido</string>
    <string name="act_login_longitud_password">La longitud mínima es de 8 caracteres</string>
    <string name="act_login_numero_password">Debe contener un número</string>
    <string name="act_login_mensaje_bienvenida">¡Bienvenido/a a Walls4me!</string>
    <string name="act_login_mensaje_error">Correo o contraseña incorrectos</string>
    <string name="act_recupera_pass_correo_invalido">Correo inválido</string>
    <string name="act_recupera_pass_correo_enviado">Correo enviado</string>
    <string name="act_register_introducir_nombre">Introduce tu nombre</string>
    <string name="act_register_correo_invalido">Correo inválido</string>
    <string name="act_register_longitud_password">La longitud mínima es de 8 caracteres</string>
    <string name="act_register_numero">Debe contener un número</string>
    <string name="act_register_passwords">Las contraseñas deben coincidir</string>
    <string name="act_register_bienvenida">¡Bienvenido/a a Walls4me!</string>
    <string name="act_register_correo_uso">El correo introducido ya está en uso.</string>
    <string name="frg_categorias_error_obtener_datos">Compruebe la conexión y vuelva a intentarlo</string>
    <string name="act_wallpaper_fondo_actualizado">Fondo de pantalla actualizado!</string>
    <string name="act_wallpaper_problema">Ha ocurrido un problema</string>
</resources>