<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperaPassActivity">

    <TextView
        android:id="@+id/act_recupera_pass_txt_cabecera"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:background="@color/azul"
        tools:text="@string/act_recupera_pass_txt_cabecera" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="28dp"
        android:paddingTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_recupera_pass_txt_cabecera">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:text="@string/titulo_recupera_pass"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/subtitulo_recupera_pass"
            android:textAlignment="center"
            android:layout_marginVertical="4dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/act_recupera_pass_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/fondo_input"
            android:drawableStart="@drawable/custom_correo_icono"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/act_recupera_pass_hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="12dp" />

        <Button
            android:id="@+id/act_recupera_pass_btn_recuperar_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/fondo_input"
            android:backgroundTint="@color/azul"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:text="@string/act_recupera_pass_recuperar_pass"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>