<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentInfo">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="30"
                android:src="@drawable/ic_usuario_actual" />

            <TextView
                android:id="@+id/frg_info_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_weight="70"
                android:text="@string/frg_ajustes_email"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/frg_info_btn_aviso_legal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/base"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="24dp"
            android:drawableStart="@drawable/ic_aviso_legal"
            android:text="@string/frg_info_aviso_legal"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/frg_info_btn_cerrar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:background="@drawable/fondo_input"
        android:backgroundTint="@color/botones"
        android:paddingHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/act_ajustes_txt_cerrar_sesion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

</androidx.constraintlayout.widget.ConstraintLayout>